Bug 1817936: When using compat mode, compare against [[LastReturnedParameters]] if set. r=jib, a=dmeehan

Differential Revision: https://phabricator.services.mozilla.com/D170680